--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: Just Do It !
-subTitle: The most perfect shoe in the world.
+subTitle: The most perfect shoe in the world.<br/> 세상에서 가장 완벽한 신발.
 ---
