--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default<font color=#EE82EE>
-title: Just Do It !</font>
+layout: default
+title: <font color=#EE82EE>Just</font> Do It !
 subTitle: The most perfect shoe in the world.<br/> 세상에서 가장 완벽한 신발.
 ---
