--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title: Just Do It !
-<br/><font color=#EE82EE>Just</font> Do It !
+title: <font color=#EE82EE>Just</font> Do It !
 subTitle: The most perfect shoe in the world.<br/> 세상에서 가장 완벽한 신발.
 ---
