--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: Just Do It !
-subTitle: <font color=#F0F8FF>The most perfect shoe in the world.</font><br/> 세상에서 가장 완벽한 신발.
+subTitle: <font color=#87CEFA><b>The most perfect shoe in the world.</b></font><br/> 세상에서 가장 완벽한 신발.
 ---
