--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: Just Do It !
-subTitle:<p>="font-size:40px;"style Just do It !</p><font color=#00BFFF><b>The most perfect shoe in the world.</b></font><br/> 세상에서 가장 완벽한 신발.
+subTitle: <p style="font-size:200%">Just Do it - 200%</p><font color=#00BFFF><b>The most perfect shoe in the world.</b></font><br/> 세상에서 가장 완벽한 신발.
 ---
