--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: Just Do It !
-subTitle: <p style="font-size:100%">AnyWhare </p> <p style="font-size:100%">AnyTime</p><font color=#00BFFF><b>The most perfect shoe in the world.</b></font><br/> 세상에서 가장 완벽한 신발.
+subTitle: <p style="font-size:200%">ANYWHARE </p> <p style="font-size:200%">ANYTIME</p><font color=#00BFFF><b>The most perfect shoe in the world.</b></font><br/> 세상에서 가장 완벽한 신발.
 ---
